<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_gravity="center_vertical"
            android:padding="@dimen/medium_padding_size"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinputlayout_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintBottom_toTopOf="@+id/textinputlayout_password">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_type_your_username"
            />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinputlayout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent"
                app:layout_constraintTop_toBottomOf="@+id/textinputlayout_username"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBottom_toTopOf="@+id/button_signin">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>


        <ProgressBar
                android:id="@+id/progressbar_signin"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@+id/button_signin"
                app:layout_constraintBottom_toBottomOf="@+id/button_signin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:elevation="2dp"
                android:translationZ="2dp"
                android:visibility="gone"
        />

        <Button
                android:id="@+id/button_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textinputlayout_password"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/title_signin"
        />

        <TextView
                android:layout_marginTop="@dimen/medium_padding_size"
                android:id="@+id/textview_to_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/button_signin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/hint_to_signup"
                android:gravity="center_horizontal"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>