...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleTint="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textinputlayout_password"
                app:layout_constraintBottom_toTopOf="@+id/button_signup">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>
...
