...
    <string name="success_signup">Success singup new account</string>
    <string name="error_signup">Error occured when signing up</string>
    <string name="error_username_already_taken">Username already taken, please use another one</string>
    <string name="error_unknown_error">Unknown error occured, please contact our support</string>
    <string name="error_entered_wrong_password">You have entered wrong password</string>
    <string name="error_username_not_registered">User with such username is not registered</string>
    <string name="title_home">Home</string>

    <string-array name="countries_array">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
...
